--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "diff": "^5.2.0",
+    "diff2html": "^3.4.48",
+    "pdf-poppler": "^0.2.1",
     "pdfjs-dist": "^4.5.136"
   }
 }
