--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "diff": "^5.2.0",
     "diff2html": "^3.4.48",
+    "exceljs": "^4.4.0",
     "pdf-poppler": "^0.2.1",
-    "pdfjs-dist": "^4.5.136"
+    "pdfjs-dist": "^4.5.136",
+    "xml2js": "^0.6.2",
+    "zip": "^1.2.0"
   }
 }
